Fixed spacing between search and donated toggle on Gyroids page

--- a/acnh.css
+++ b/acnh.css
@@ -88,7 +88,7 @@
   font-size: 20px;
 }
 
-.fossils__filters__search, .art__filters__search, .songs__filters__search {
+.fossils__filters__search, .art__filters__search, .songs__filters__search, .gyroids__filters__search {
   margin-left: 30px;
 }
 
